--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ logging.level.com.example.demo.service=debug
 
 #로그 파일 저장
 logging.file.name=logs/app.log
+
+# ===================================
+# 화면템플릿 설정
+# ===================================
+spring.thymeleaf.cache=false
+
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.mustache
+spring.mustache.charset=UTF-8
+spring.mustache.servlet.cache=false
